# rig-experimental

./: .gitignore  Cargo.toml  README.md
examples/: candle.rs  elevenlabs.rs  openai_rt.rs  openai_rt_cpal.rs  prompt_template.rs  routing.rs
src/: lib.rs  prompt_templating.rs  routing.rs
src/agents/: autonomous.rs  mod.rs
src/providers/: elevenlabs.rs  mod.rs
src/providers/candle/: completion.rs  mod.rs
src/providers/elevenlabs/: audiogen.rs  mod.rs
src/providers/openai_realtime/: client.rs  mod.rs  realtime.rs
